# condenser

./: .gitignore  CLAUDE.md  README.md  noise_profiling_across_batch_of_ionq_circuits_sami.ipynb  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: collect-results.yml  deploy-dashboard.yml  renovate.yml  submit-benchmark-ionq-braket.yml  submit-benchmark-ionq.yml  submit-benchmark-iqm.yml  submit-benchmark.yml
archive/: aqt_qiskit_notebook.ipynb  reading results from S3 + visualization.ipynb  rigetti_notebook.ipynb
archive/ibm/: Our quantum circuit use-case on qiskit-2.ipynb  compute_noise_stability .html  success_probability_qiskit_Jun16th_10_batch.csv  success_probability_qiskit_March11th_25_batch.csv  success_probability_qiskit_March16th_10_batch.csv  success_probability_qiskit_March18th_10_batch.csv  success_probability_qiskit_March18th_10_batch_500shots.csv  success_probability_qiskit_March8th_10_batch.csv  success_probability_qiskit_differentTime.csv
benchmarks/: aqt_qiskit.py  circuits.py  ibm_qiskit.py  ionq_braket.py  ionq_direct.py  iqm_braket.py  rigetti_braket.py
dashboard/: README.md  eslint.config.js  observablehq.config.js  package-lock.json  package.json
infra/: README.md  iam-policy.json  iam-trust-policy.json
ionq/: noise_profiling_across_batch_of_ionq_circuits.ipynb
scripts/: check_ibm.py  collect_results.py  cost_estimate.py  extract_s3_results.py  fetch_ionq_history.py  import_ibm_history.py  submit_benchmark.py
tests/: test_circuits.py  test_dashboard_loaders.py  test_scripts.py  test_simulator.py
(+32 files in other folders)
