[project]
name = "condenser"
version = "0.1.0"
description = "Longitudinal stability benchmarking of quantum computing platforms"
requires-python = ">=3.11"
dependencies = [
    "amazon-braket-sdk>=1.88.0",
    "qiskit>=1.0.0",
    "qiskit-aqt-provider>=1.0.0",
    "qiskit-ibm-runtime>=0.20.0",
    "requests>=2.32.0",
    "pandas>=3.0.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["archive/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # qiskit-aqt-provider uses deprecated Qiskit BackendV1 internals — not our code
    "ignore::DeprecationWarning:qiskit",
    "ignore::DeprecationWarning:qiskit_aer",
    "ignore::qiskit_aqt_provider.aqt_provider.NoTokenWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
]
